--- a/autonav/templates/cuadros/view.css
+++ b/autonav/templates/cuadros/view.css
@@ -13,40 +13,53 @@
 
 
 }
-.item {
+.item-listado {
   display:table;
   	background-color: #0079c2;
 	margin-bottom: 2px;
-	opacity:0.7;
+	opacity:0.5;
 }
 
-.item a {
+.item-listado a {
 	color:white;
+    font-weight: bold;
+    font-size: 1.1em;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 2px #000,
+    -1px 1px 2px #000,
+    1px 1px 0 #000; 
 }
 
 
-.item:nth-of-type(n) {
+.item-listado:nth-of-type(n) {
     background-color: #0079c2;
 }
 
-.item:nth-of-type(2n) {
+.item-listado:nth-of-type(2n) {
     background-color: #0a00c2;
 }
 
-.item:nth-of-type(3n){
+.item-listado:nth-of-type(3n){
     background-color: #8b00c2;
 }
-.item:nth-of-type(4n){
-    background-color: #416881;
+
+.item-listado:nth-of-type(4n){
+    background-color: #7F0200;
+    /*#416881;*/
 }
 
-.item:nth-of-type(5n){
-    background-color: #3d3d3d;
+.item-listado:nth-of-type(5n){
+    background-color: #97CA04;/*#3d3d3d;*/
 }
 
-.item:nth-of-type(6n){
-    background-color: #651A83;
+.item-listado:nth-of-type(6n){
+    background-color: #FFBF02; /*#651A83;*/
 }
-.item:nth-of-type(7n){
-    background-color: #0079c2;
+.item-listado:nth-of-type(7n){
+    background-color: #009D9B;
+}
+
+.item-listado:nth-of-type(8n){
+    background-color: #FE6400;
 }
