--- a/page_list/templates/destacados/view.css
+++ b/page_list/templates/destacados/view.css
@@ -19,13 +19,18 @@
 }
 
 #destacados .item-listado .descripcion {	
- display:none;
-
+    display:none;
+    position: relative;
+    top:40px;
 	margin-bottom: 2px; 
 	vertical-align: middle;
 	text-align: center;
     padding: 5px;
     z-index:3;
+}
+
+#destacados .item-listado .descripcion .oculto {
+    position: absolute;
 }
 
 #destacados .item-listado .titulo {
