--- a/autonav/templates/tree/view.css
+++ b/autonav/templates/tree/view.css
@@ -1,42 +1,47 @@
 .tree {
-    width: 250px;
+    width: 100%;
     min-height:20px;
-
     margin-bottom:20px;
     /*background-color:#fbfbfb;*/
 
 }
-.tree .nav-selected > .carpeta >.nodo, .tree .nav-selected > .nodo{
-    border:1px solid rgb(114, 129, 168); 
+.tree li.nav-selected > .carpeta >.nodo, .tree li.nav-selected > .nodo, .tree li.parent_li > ul > li.nav-selected > .nodo{
+    color: white;
+    border:1px solid rgb(114, 129, 168);
+    background-color: #65acd8; 
 }
 .tree ul {
     padding-left: 15px;
 } 
 
 .tree > .nivel1 > li >.nodo, .tree > .nivel1 > li > .carpeta >.nodo{
-    padding: 6px 10px;
+    padding: 3px 10px;
 }
 
 .tree li {
-        list-style-type:none;
+    list-style-type:none;
+    margin: 0.5em 0;
 }
 
 .tree .nodo {
     margin-bottom:1px;
-    padding: 6px 10px;
+    padding: 3px 10px;
     position:relative;
     display: inline-block;
-    border: 1px solid #999;
-    border-radius: 5px;
+    border: 1px solid rgb(182, 195, 212);
+    border-radius: 2px;
     color: #333;
     background-color: #f2f2f2;
-    border-color: #ddd;
     width: 100%;
+    -webkit-box-shadow: 2 2px 10px rgba(0,0,0,0.2);
+    -moz-box-shadow: 2 2px 10px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 
 }
 .tree .nodo:hover{
     background-color: #AAB5C4 
 }
+
 .tree a {
   color: black;
   display: block;
@@ -44,6 +49,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-decoration: none;
+  font-size: 12px;
+  padding-top: 1px;
 }
 
 .tree .nodo a:hover {
@@ -66,7 +73,7 @@
 
 .tree li span {
     display:inline-block;
-    padding:3px 8px 3px 0;
+    padding:0 8px 0 0;
     text-decoration:none;
     color: #0079c2;
     float: left;
