--- a/autonav/templates/tree/view.css
+++ b/autonav/templates/tree/view.css
@@ -82,7 +82,7 @@
     cursor:pointer
 }
 .tree li.parent_li > ul > li {
-    display: none
+/*    display: none */
 }
 .tree>ul>li::before, .tree>ul>li::after {
     border:0
