--- a/autonav/templates/tree/view.css
+++ b/autonav/templates/tree/view.css
@@ -1,10 +1,30 @@
+.tree:hover {
+
+   transition-property:width, position, z-index;
+   transition: ease 0.5s;
+   webkit-transition-property:width, position, z-index;
+   webkit-transition: ease 0.5s;
+
+   width:200%;
+   z-index:3;
+   position: relative;
+   background-color:rgba(255, 255, 255, 0.6);
+
+}
+
+
 .tree {
     width: 100%;
     min-height:20px;
     margin-bottom:20px;
-    /*background-color:#fbfbfb;*/
+    transition-property:width, position, z-index;
+    transition: ease 0.5s;
+    webkit-transition-property:width, position, z-index;
+    webkit-transition: ease 0.5s;
+    padding-right: 10px;
 
 }
+
 .tree li.nav-selected > .carpeta >.nodo, .tree li.nav-selected > .nodo, .tree li.parent_li > ul > li.nav-selected > .nodo{
     color: white;
     border:1px solid rgb(114, 129, 168);
@@ -31,7 +51,7 @@
     border: 1px solid rgb(182, 195, 212);
     border-radius: 2px;
     color: #333;
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     width: 100%;
     -webkit-box-shadow: 2 2px 10px rgba(0,0,0,0.2);
     -moz-box-shadow: 2 2px 10px rgba(0,0,0,0.2);
